@@ -31,7 +31,7 @@ public class RFToolsStorage implements ModBase {
         instance = this;
 
         ModLoadingContext.get().registerConfig(ModConfig.Type.CLIENT, Config.CLIENT_CONFIG);
-        ModLoadingContext.get().registerConfig(ModConfig.Type.COMMON, Config.COMMON_CONFIG);
+        ModLoadingContext.get().registerConfig(ModConfig.Type.SERVER, Config.SERVER_CONFIG);
 
         ModularStorageSetup.register();
         StorageScannerSetup.register();
