@@ -6,6 +6,7 @@ Upcoming:
 - Moved the dump and storage control modules from RFTools Utility to RFTools Storage
 - The Storage Scanner Module can now be inserted in the RFTools Base tablet giving remote access to the scanner
 - Fixed the recipes for the vanilla recipe book
+- Moved most of the configs from common to server (so that they are saved with the world and synced to the client)
 
 1.0.3-alpha:
 - Re-implemented the filter module for the Modular Storage
